2014-05-23  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Created.

2014-05-14  Ben Chaco  <bchaco@x3-c.com>

	* build-libs.sh (function build-loader): Implement make-based build.
	(function build-hal):  Implement make-based build.
	(function build-server): Implement make-based build.
	(function build-utils): Implement make-based build.
	(function build-lib): Implement make-based build.
	(function usage): Added a clean build (-c) option.
